@@ -1,5 +1,5 @@
 Package: BiocCheck
-Version: 1.13.1
+Version: 1.13.2
 Title: Bioconductor-specific package checks
 Description: Executes Bioconductor-specific package checks.
 Authors@R: c(
